# md-directory-data-entry-django

./: Dockerfile  pyproject.toml
app/lions_md/common_modules/: award_attendees_2011.py  db_settings.ini  models.py  orm_settings.py
app/lions_md/md_directory/: models.py  views.py
