[tool.poetry]
name = "md_directory_data_entry_django"
version = "0.1.0"
description = "Extraction of Django data entry aspects of https://gitlab.com/kimvanwyk/md_directory for Dockerisation"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^2.7"
Django = "1.5.1"
mysqlclient = "1.4.5"
South = "0.8.1"
SQLAlchemy = "0.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
